[package]
name = "metadsl_calculator"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
metadsl_macros = { path = "../metadsl_macros" }
metadsl = { path = "../metadsl" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline = "13"

[lib]
name = "metadsl_calculator"
path = "src/lib.rs"

[[bin]]
name = "metadsl_calculator"
path = "src/main.rs"